# inpdf

./: Cargo.toml  README.md
src/: cli.rs  main.rs  mcp.rs  page_range.rs
src/commands/: extract.rs  grep.rs  info.rs  merge.rs  mod.rs  split.rs  toc.rs
src/pdf/: document.rs  mod.rs  page_labels.rs  text.rs  toc.rs
